# test

./: 1011A.c  1020B.c  1025A.c  1039B.c  1056A.c  1166A.c  131B.c  37A.c  440A.c  672B.c  777B.c  841A.c  CMakeLists.txt  main.c  main2.c  test.c  test2.c
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  multidimensional_arrays.c  multidimensional_arrays.h  multidimensional_test.c
libs/data_structures/string_/: stringTest.c  string_.c  string_.h
libs/data_structures/string_/tasks/: string_.c  string_.h  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
libs/data_structures/vector/: test2.c  vector.c  vector.h
libs/data_structures/vectorvoid/: vectorvoid.h
libs/files/: 10_task.c  1_task.c  2_task.c  3_task.c  4_task.c  5_task.c  6_task.c  7_task.c  8_task.c  9_task.c
libs/files/20lab/: task_1.c  task_10.c  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
