add_library(data_structures
        bitset/bitset.c
        unorderedset/unorderedset.h
        unorderedset/unorderedset.h
        unorderedset/unorderedset.c
        orderedset/orderedset.h
        orderedset/orderedset.c
        vector/vector.h
        vector/vector.c
        vectorvoid/vectorvoid.h
        vectorvoid/vectorvoid.c
        matrix/matrix.h
        matrix/matrix.c
        matrix/matrix_test.c
        matrix/multidimensional_arrays.h
        matrix/multidimensional_arrays.h
        matrix/multidimensional_arrays.c
        matrix/multidimensional_test.c
        string_/tasks/string_.h
        string_/stringTest.c
        string_/tasks/string_.c
        string_/tasks/task1.c
        string_/tasks/task2.c
        string_/tasks/task3.c
        string_/tasks/task4.c
        string_/tasks/task5.c
        string_/tasks/task6.c
        string_/tasks/task7.c
        string_/tasks/task8.c
        string_/tasks/task9.c
        string_/tasks/task10.c
        string_/tasks/task11.c
        string_/tasks/task12.c
        string_/tasks/task13.c
        string_/tasks/task14.c
        string_/tasks/task15.c
)

target_link_libraries(data_structures algorithms)